# transpiler

./: .gitignore  LICENSE  README.md  grammar.example  grammar.langium  grammar.md  lisp_grammar.md  package-lock.json  package.json  small_grammar.md  tsconfig.json
cpp_library/: CMakeLists.txt
cpp_library/prototypes/: foldl.hpp  lambda_example.cpp  lambda_inline_example.cpp  lambda_recurse_factorial.cpp  list.hpp  map.hpp  until_rev2.hpp
cpp_library/src/: until.hpp
cpp_library/test/: main.test.cpp  until.test.cpp  until_rev2.test.cpp
grammar/: built_in_functions.md  built_in_functions.rst  example.code  grammar.langium  lisp_grammar.md  lisp_grammar.rst  minimal_lisp.md  small_grammar.md  small_grammar.rst  small_grammar_plain_format.md  small_grammar_plain_format.rst
prototype_json_ast/: annotated_add.json  annotated_lambda_immediate.json  annotated_lambda_immediate_with_newlines.json  detailed_lambda_immediate.json  immediate_lambda.scm  overengineered_lambda_immediate.json  simple_add.json  simple_lambda_immediate.json
prototypes/: Makefile  count_via_until.cpp  foldl.hpp  left_fold_via_until.cpp  list.hpp  until.hpp
scrapbook/: annotated_lambda_immediate.json  annotated_lambda_immediate_with_newlines.json  messy_annotation_lambda_immediate.json  overengineered_add.json  overengineered_lambda_immediate.json  simple_lambda_immediate.json
src/: common.ts  cpp_toolchain.ts  document.ts  generate.ts  main.ts  nodes.ts  parse.ts
test/: arithmetic.test.ts  cpp_toolchain.test.ts  define.test.ts  display.test.ts  example.test.ts  float.test.ts  lambda.test.ts  (+3 more)
(+42 files in other folders)
